src/deployment/conv-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: service-backend
  template:
    metadata:
      labels:
        components: service-backend
    spec:
      containers:
        - name: conv-service
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 3001
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: conv-service-data
              mountPath: /opt/app/uploads
      volumes:
        - name: conv-service-data
          persistentVolumeClaim:
            claimName: conv-service-pvc
