src/deployment/rabbit-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: rabbit
  template:
    metadata:
      labels:
        components: rabbit
    spec:
      containers:
        - name: rabbit
          image: rabbitmq:3.12.7
          ports:
            - containerPort: 5672
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: rabbit-data
              mountPath: /var/lib/rabbitmq
              subPath: rabbitmq
      volumes:
        - name: rabbit-data
          persistentVolumeClaim:
            claimName: rabbit-pvc
