src/deployment/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: frontend
