src/deployment/conv-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-service-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 3001
      protocol: TCP
  selector:
    components: service-backend
