src/deployment/rabbit-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 5672
      protocol: TCP
  selector:
    components: rabbit
